
Loris is Copyright (c) 1999-2009 by Kelly Fitz and Lippold Haken.


History of visible changes, organized by relase number:

-------------------------------------------------------
changes since 1.5.3 release:

- Fixed a bug involving the use of the nonstandard extension
std::isfinite that prevented compilation with some compilers.

-------------------------------------------------------
changes since 1.5.2 release:

- Analyzer can have time-varying frequency resolution
specified by an Envelope.

- Replaced Fundamental class with a pair of classes for
estimating fundamental frequency, FundamentalFromSamples
performs reassigned spectral analysis and estimates the
fundamental from the spectral peaks, and FundamentalFromPartials
estimates the fundamental from the frequency and amplitude
envelopes of a collection of Partials.

- Added Fundamental classes to scripting (Python) interface.

- Look for Csound5 headers at config time, and prefer to
build Csound5 opcode library, fall back to Csound4. 

- Added Visual Studio 2008 projects for building the simple
morphing test and the Python module under windows.

- Improved 64-bit compatibility.

-------------------------------------------------------
changes since 1.5.1 release:

- Analyzer always constructs amplitude and fundamental
frequency envelopes during analysis (cannot disable).

- fixed broken SpcFile::addPartial members in Python 
interface.

- improved resampling in the Python interface, now
have options for sparse (default) and dense (good 
for use with CNMAT sinusoids~ external for Max/MSP)
resampling.

-------------------------------------------------------
changes since 1.5 release:

- updated command-line analysis utility (loris-analyze)
to estimate the fundamental frequency reference envelope
during analysis when distilling or sifting.

- updated command-line analysis utility (loris-analyze)
to provide a choice between spectral residue (-bwresidue)
and sinusoidal convergence (mixed derivative of phase)