@@ -35,6 +35,11 @@ changes since 1.5.3 release:
 - Fixed a bug involving the use of the nonstandard extension
 std::isfinite that prevented compilation with some compilers.
 
+- Implemented LinearEnvelope iterators in Python. 
+
+- Implemented addition and subtraction of two LinearEnvelopes
+in C++ and Python.
+
 -------------------------------------------------------
 changes since 1.5.2 release:
 
